Add static file upload functionality.
This commit introduces a new feature that allows users to upload static files. Specifically, two new service implementation files, internal/server/upload.go and internal/service/upload.go, have been introduced which contain request handler and server-side logic for the file upload feature, respectively. Additionally, related documentation is updated in files docs/swagger.json, docs/swagger.yaml, and docs/docs.go. Necessary dependencies are also included in the go.mod file. This feature will greatly benefit users who need to upload images or other static content.
